package org.lakehouse.taskexecutor.executionmodule.body.transformer;

public abstract class DataTransformerAbstract implements DataTransformer {
/*    private final SparkSession sparkSession;
    public DataTransformerAbstract(SparkSession sparkSession) {
        this.sparkSession = sparkSession;
    }*/

/*    public SparkSession getSparkSession() {
        return sparkSession;
    }*/
}
